# hexagonal_chess

./: .gitignore  Cargo.toml  README.md
src/: board.rs  config.rs  game.rs  lib.rs  main.rs  moves.rs  pieces.rs  validation.rs
www/: .gitignore  LICENSE  index.html  index.js  package-lock.json  package.json  script.js  style.css
