[package]
name = "hexagonal_chess"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1.0.163", features = ["derive"] }
toml = "0.8.0"
wasm-bindgen = "0.2.87"
serde_json = "1.0.107"
